# RTPySynth

./: .gitignore  README.md  pyproject.toml
examples/: RTPySynth.ipynb
realtime_synth/: __init__.py  engine.py  utils.py
realtime_synth/generators/: RNNGen.py  __init__.py  base.py  noisy_lp.py  sine.py  template.py
realtime_synth_ui/: __init__.py  widgets.py
